syntax = "proto3";
package emissions.v1;

option go_package = "github.com/allora-network/allora-chain/x/emissions/migrations/v2/types";

import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "emissions/v1/nonce.proto";

message Topic {
  uint64 id = 1;
  string creator = 2;
  string metadata = 3;
  string loss_logic = 4;
  string loss_method = 5;
  string inference_logic = 6;
  string inference_method = 7;
  int64 epoch_last_ended = 8;
  int64 epoch_length = 9;
  int64 ground_truth_lag = 10;
  string default_arg = 11;
  string p_norm = 12
      [(gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec", (gogoproto.nullable) = false];
  string alpha_regret = 13
      [(gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec", (gogoproto.nullable) = false];
  bool allow_negative = 14;
  string epsilon = 15
      [(gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec", (gogoproto.nullable) = false];
  string initial_regret = 16
      [(gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec", (gogoproto.nullable) = false];
}

message TopicList {
  repeated Topic topics = 1;
}

message TimestampedActorNonce {
  option (gogoproto.equal) = true;

  int64 block_height = 1;  // height at which value calculated or received
  string actor = 2;
  Nonce nonce = 3;
}